Work in progress on the output connector for ManifoldCF - Connection check - Javascript check - File size limit - Mime type list

--- a/src/manifoldcf/connector/src/main/resource/org/apache/manifoldcf/agents/output/opensearchserver/viewSpec.html
+++ b/src/manifoldcf/connector/src/main/resource/org/apache/manifoldcf/agents/output/opensearchserver/viewSpec.html
@@ -3,4 +3,8 @@
 		<td class="description"><nobr>Max file size</nobr> (bytes):</td>
 		<td class="value">${MAXFILESIZE}</td>
 	</tr>
+	<tr>
+		<td class="description"><nobr>Allowed MIME types:</nobr></td>
+		<td class="value">${MIMETYPES}</td>
+	</tr>
 </table>
