--- a/readme.html
+++ b/readme.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Open Search Server</title>
+<title>OpenSearchServer</title>
 </head>
 <body>
-<h1><img src="oss_logo.png"/>Open Search Server</h1>
-<p>Open Search Server is first and foremost an open source project,
+<h1><img src="oss_logo.png"/>OpenSearchServer</h1>
+<p>OpenSearchServer is first and foremost an open source project,
 distributed under a GNU/GPL v3 licensing. Its goal is to make available
 to a user community a series of tools. To do so, we have chosen the
 SourceForge portal and its superior services.</p>
-<p>Built using the best open source technologies available, Open
-Search Server is a stable, high-performance piece of software. It is
+<p>Built using the best open source technologies available, OpenSearchServer
+is a stable, high-performance piece of software. It is
 both a modern search engine and a suite of high-powered full text search
 algorithms.</p>
 <ul>
@@ -41,18 +41,16 @@ algorithms.</p>
 	<li>Quick integration thanks to an XML interface via HTTP queries
 	(XML over HTTP).</li>
 </ul>
-<p>Open Search Server runs on Windows 20xx/XP/Vista, MacOS X,
+<p>OpenSearchServer runs on Windows 20xx/XP/Vista, MacOS X,
 Solaris and Linux + Java Virtual Machine.</p>
 
 <h2>Links</h2>
 <ul>
 	<li><a href="http://sourceforge.net/projects/opensearchserve/">SourceForge
 	project</a></li>
-	<li><a href="http://www.open-search-server.com">Open Search
-	Server Web site</a></li>
+	<li><a href="http://www.open-search-server.com">OpenSearchServer Web site</a></li>
 	<li><a
-		href="http://sourceforge.net/apps/mediawiki/opensearchserve/">Documentation
-	wiki</a></li>
+		href="http://www.open-search-server.com/documentation">Documentation</a></li>
 	<li><a href="http://sourceforge.net/forum/?group_id=260863">Forums</a></li>
 	<li><a href="http://sourceforge.net/tracker/?group_id=260863">Bug
 	report and features request</a></li>
