Work on #1327 and #1328

--- a/src/main/webapp/WEB-INF/ftl/inc/nav.html
+++ b/src/main/webapp/WEB-INF/ftl/inc/nav.html
@@ -12,7 +12,7 @@
 		<div class="collapse navbar-collapse" id="oss-navbar">
 			<ul class="nav navbar-nav">
 				<li [#if request.servletPath="/ui" ]class="active"[/#if]><a
-					href="${request.contextPath}/">OpenSearchServer</a></li>
+					href="${request.contextPath}/ui">${version}</a></li>
 				<li><a href="http://www.opensearchserver.com/documentation">Documentation</a></li>
 				<li><a href="http://www.opensearchserver.com/#support">Support</a></li>
 			</ul>
