--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,9 +10,11 @@
     content="OpenSearchServer"
   />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   <title>OpenSearchServer</title>
 </head>
-<body>
+<body style="margin: 0; padding: 0">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
